# timebomb

./: README.md  pyproject.toml  test.py
timebomb/client/: __main__.py  test.py  test2.py
timebomb/client/cli/: __init__.py  base.py  errors.py  example.py  typesx.py
timebomb/client/testings/: test.py  test2.py
timebomb/server/: __init__.py  room.py
