[tool.poetry]
name = "timebomb"
version = "0.1.0"
description = "Word bomb clone in python"
authors = ["timelessnesses <mooping3roblox@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
art = "^6.0"
websockets = "^11.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
