[tool.poetry]
name = "timebomb"
version = "0.1.0"
description = "Word bomb clone in python"
authors = ["timelessnesses <mooping3roblox@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.client.dependencies]
websockets = "^11.0.3"
requests = "^2.31.0"

[tool.poetry.group.server.dependencies]
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
async-timeout = "^4.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
